# DynamicTournament

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  config.json  deny.toml  hosted.css  index.css  index.html
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
assets/: icons.css
docs/: README.md
docs/v1/: README.md
docs/v2/: README.md  auth.md  tournament.md
docs/v3/: README.md  auth.md  systems.md  tournaments.md
docs/v3/tournaments/: README.md  brackets.md  entrants.md  roles.md
docs/v3/tournaments/brackets/: README.md  leb128.c  matches.md
dynamic-tournament-api/: Cargo.toml
dynamic-tournament-api/src/: auth.rs  http.rs  lib.rs  payload.rs  tournament.rs  websocket.rs
dynamic-tournament-api/src/v3/: auth.rs  id.rs  mod.rs  systems.rs  tournaments.rs  users.rs
dynamic-tournament-api/src/v3/tournaments/: brackets.rs  entrants.rs  log.rs  roles.rs
dynamic-tournament-api/src/v3/tournaments/brackets/: matches.rs
dynamic-tournament-cli/: Cargo.toml
dynamic-tournament-cli/src/: main.rs  systems.rs  tournaments.rs
dynamic-tournament-cli/src/utils/: mod.rs
dynamic-tournament-core/: Cargo.toml
dynamic-tournament-core/src/: double_elimination.rs  lib.rs  options.rs  render.rs  round_robin.rs  single_elimination.rs  standings.rs  swiss.rs  tournament.rs  utils.rs
dynamic-tournament-core/src/options/: serde_impl.rs
dynamic-tournament-description/: Cargo.toml
dynamic-tournament-description/src/html/: lexer.rs  mod.rs  parser.rs  render.rs
dynamic-tournament-generator/: Cargo.toml
dynamic-tournament-generator/src/: double_elimination.rs  lib.rs  options.rs  render.rs  single_elimination.rs  tournament.rs  utils.rs
dynamic-tournament-macros/: Cargo.toml
dynamic-tournament-macros/src/: lib.rs
dynamic-tournament-macros/src/server/: mod.rs  path.rs
dynamic-tournament-macros/src/web/: file.rs  load_asset.rs  mod.rs
dynamic-tournament-scripter/: Cargo.toml  single_elimination
dynamic-tournament-scripter/src/: asm.rs  instructions.rs  lib.rs  tournament.rs
dynamic-tournament-server/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.toml  config.toml.example
dynamic-tournament-server/src/: auth.rs  config.rs  event_log.rs  limits.rs  logger.rs  main.rs  metrics.rs  signal.rs  state.rs
dynamic-tournament-server/src/http/: etag.rs  metrics.rs  mod.rs  path.rs  v1.rs
dynamic-tournament-server/src/http/v1/: auth.rs  mod.rs  tournament.rs
dynamic-tournament-server/src/http/v2/: auth.rs  mod.rs  tournament.rs
dynamic-tournament-server/src/http/v3/: mod.rs  systems.rs  tournaments.rs  users.rs
dynamic-tournament-server/src/http/v3/tournaments/: brackets.rs  entrants.rs  log.rs  roles.rs
dynamic-tournament-server/src/http/v3/tournaments/brackets/: matches.rs
dynamic-tournament-server/src/store/: id.rs  mod.rs
dynamic-tournament-server/src/websocket/: live_bracket.rs  mod.rs
dynamic-tournament-test/: Cargo.toml
dynamic-tournament-test/src/: lib.rs  main.rs
dynamic-tournament-web/: Cargo.toml  Dockerfile  Makefile  README.md  index.html
dynamic-tournament-web/docker/nginx/conf.d/: default.conf
dynamic-tournament-web/src/: bracket_generator.rs.old  bracket_generator.rs_  consts.rs  lib.rs  logger.rs  main.rs  statics.rs
dynamic-tournament-web/src/api/: mod.rs  tournament.rs
dynamic-tournament-web/src/api/v1/: auth.rs  tournament.rs
dynamic-tournament-web/src/components/: bracket_list.rs  button.rs  config_provider.rs  confirmation.rs  error.rs  input.rs  loader.rs  match.rs  mod.rs  movable_boxed.rs  navbar.rs  parse_input.rs  popup.rs  protected.rs  time.rs  update_bracket.rs
dynamic-tournament-web/src/components/admin/: bracket.rs  entrant.rs  match.rs  mod.rs
dynamic-tournament-web/src/components/bracket/: double_elimination.rs  entrant.rs  live_bracket.rs  live_state.rs  match.rs  mod.rs  renderer.rs  single_elimination.rs  standings.rs  team.rs
dynamic-tournament-web/src/components/errorlog/: mod.rs
dynamic-tournament-web/src/components/icons/: mod.rs
dynamic-tournament-web/src/components/providers/: auth.rs  client.rs  mod.rs
dynamic-tournament-web/src/routes/: login.rs  logout.rs  mod.rs  not_found.rs  systems.rs  tournamentlist.rs
dynamic-tournament-web/src/routes/tournament/: mod.rs  overview.rs  teamdetails.rs  teams.rs
dynamic-tournament-web/src/routes/tournaments/: admin.rs  brackets.rs  entrants.rs  log.rs  mod.rs  navbar.rs  overview.rs  teamdetails.rs  tournament.rs
dynamic-tournament-web/src/routes/tournaments/admin/: brackets.rs  danger_zone.rs  entrants.rs  settings.rs
dynamic-tournament-web/src/routes/tournaments/admin/brackets/: bracket.rs
dynamic-tournament-web/src/routes/tournaments/admin/entrants/: entrant.rs
dynamic-tournament-web/src/routes/tournaments/brackets/: bracket.rs  brackets.rs
dynamic-tournament-web/src/routes/tournaments/entrants/: entrant.rs  entrants.rs
dynamic-tournament-web/src/services/: client.rs  errorlog.rs  mod.rs
dynamic-tournament-web/src/utils/: fetch_data.rs  mod.rs  rc.rs  router.rs
src/: bracket_generator.rs  main.rs
src/api/: mod.rs  tournament.rs
src/api/v1/: auth.rs  mod.rs  tournament.rs
src/components/: config_provider.rs  error.rs  loader.rs  match.rs  mod.rs  popup.rs  team.rs  update_bracket.rs
src/components/bracket/: double_elimination.rs  match.rs  mod.rs  single_elimination.rs  team.rs
src/components/providers/: auth.rs  mod.rs
src/routes/: login.rs  logout.rs  mod.rs
src/routes/tournament/: bracket.rs  mod.rs  teamdetails.rs  teams.rs
tests/: Cargo.toml
tests/src/: main.rs
