[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
yew = "0.19"
reqwest = "0.11.10"
# reqwest = { version = "0.11.10", features = ["blocking"] }
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
yew-router = "0.16"
gloo-console = "0.2.1"
serde_repr = "0.1.7"
web-sys = { version = "0.3", features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement"] }
serde_json = "1.0.79"

[profile.release]
debug-assertions = false
opt-level = "z"
lto = "fat"
