[package]
name = "dynamic-tournament-api"
version = "0.4.0"
edition = "2021"

[features]
default = []
server = []
local-storage = ["dep:gloo-storage"]

[dependencies]
dynamic-tournament-generator = { version = "0.4.0", path = "../dynamic-tournament-generator", features = ["serde"] }

http = "0.2.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
base64 = "0.13.0"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }

gloo-storage =  { version = "0.2.0", optional = true }

[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
hyper = { version = "0.14.18", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = { version = "0.5.0"}

[target.'cfg(target_family = "wasm")'.dependencies]
reqwasm = "0.5.0"
