[package]
name = "dynamic-tournament-api"
version = "0.5.1"
edition = "2021"
description = "The API definition and implementation of the DynamicTournament system"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[features]
default = []
server = []
local-storage = ["dep:gloo-storage"]

[dependencies]
dynamic-tournament-core = { version = "0.5.1", path = "../dynamic-tournament-core", features = ["serde"] }

http = "0.2.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bincode = "1.3.3"
base64 = "0.13.0"
thiserror = "1.0.30"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"

log = "0.4.17"
gloo-storage =  { version = "0.2.0", optional = true }

[dev-dependencies]
serde_test = "1.0.137"

[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
hyper = { version = "0.14.18", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = { version = "0.5.0"}

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-utils = "0.1.3"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.30"
