[package]
name = "dynamic-tournament-api"
version = "0.6.0"
edition = "2021"
description = "The API definition and implementation of the DynamicTournament system"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[features]
default = []
server = []
local-storage = ["dep:gloo-storage"]

[dependencies]
dynamic-tournament-core = { version = "0.6.0", path = "../dynamic-tournament-core", features = ["serde"] }

http = "0.2.8"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
base64 = "0.20.0"
thiserror = "1.0.38"
chrono = { version = "0.4.23", features = ["serde"] }

log = "0.4.17"
gloo-storage =  { version = "0.2.2", optional = true }

[dev-dependencies]
serde_test = "1.0.151"

[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
hyper = { version = "0.14.23", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = { version = "0.5.0"}

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-utils = "0.1.6"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
