[package]
name = "dynamic-tournament-core"
version = "0.6.1"
edition = "2021"
description = "The crate containing all the types for building tournament"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[features]
default = []
serde = ["dep:serde"]
serde-flatten = ["serde"]

[dependencies]
log = "0.4.17"
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.147"
