[package]
name = "dynamic-tournament-description"
version = "0.1.0"
edition = "2021"
description = "Parser and default html renderer for the description"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[dependencies]
