[package]
name = "dynamic-tournament-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for other dynamic tournament crates"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[features]
default = []
server = []
web = []

[dependencies]
syn = "1.0.99"
quote = "1.0.21"
proc-macro2 = "1.0.43"
