[package]
name = "dynamic-tournament-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dynamic-tournament-api = { version = "0.1.0", path = "../dynamic-tournament-api", features = ["server"] }
dynamic-tournament-generator = { version = "0.1.0", path = "../dynamic-tournament-generator", features = ["serde"] }
tokio = { version = "1.17.0", features = ["full"] }
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "mysql", "json"] }
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
futures = "0.3.21"
toml = "0.5.8"
hyper = { version = "0.14.18", features = ["server", "tcp", "http1", "http2"] }
tokio-tungstenite = "0.17.1"
log = { version = "0.4.16", features = ["serde"] }
parking_lot = "0.12.0"
chrono = "0.4.19"
base64 = "0.13.0"

[profile.release]
debug-assertions = false
opt-level = 3
lto = "fat"
