[package]
name = "dynamic-tournament-test"
version = "0.6.0"
edition = "2021"
description = "A utility crate for creating testing data for the API"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[dependencies]
dynamic-tournament-api = { version = "0.6.0", path = "../dynamic-tournament-api" }

chrono = "0.4.19"
rand = "0.8.5"
tokio = { version = "1.18.2", features = ["full"] }
