[package]
name = "dynamic-tournament-web"
version = "0.5.1"
edition = "2021"
description = "The Web UI part of the DynamicTournament system"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[dependencies]
dynamic-tournament-api = { version = "0.5.1", path = "../dynamic-tournament-api", features = ["local-storage"] }
dynamic-tournament-core = { version = "0.5.1", path = "../dynamic-tournament-core", features = ["serde"] }

wee_alloc = "0.4.5"
yew = "0.19.3"
reqwasm = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
gloo-console = "0.2.1"
gloo-events = "0.1.2"
gloo-timers = { version = "0.2.3", features = ["futures"] }
web-sys = { version = "0.3.56", features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement", "TouchEvent", "TouchList", "Touch"] }
log = { version = "0.4.16", features = ["release_max_level_warn"]}
futures = "0.3.21"
wasm-bindgen-futures = "0.4.30"
yew-agent = "0.1.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
wasm-bindgen = "0.2.80"
gloo-utils = "0.1.3"
asyncsync = { version = "0.2.0", features = ["local"] }
thiserror = "1.0.32"

[profile.release]
debug-assertions = false
opt-level = "z"
lto = "fat"
panic = "abort"
