[package]
name = "dynamic-tournament-web"
version = "0.6.2"
edition = "2021"
description = "The Web UI part of the DynamicTournament system"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/DynamicTournament"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
dynamic-tournament-api = { version = "0.6.2", path = "../dynamic-tournament-api", features = ["local-storage"] }
dynamic-tournament-core = { version = "0.6.2", path = "../dynamic-tournament-core", features = ["serde"] }
dynamic-tournament-macros = { version = "0.6.2", path = "../dynamic-tournament-macros", features = ["web"] }

yew = "0.19.3"
yew-agent = "0.1.0"

serde = { version = "1.0.151", features = ["derive"] }
gloo-console = "0.2.3"
gloo-events = "0.1.2"
gloo-timers = { version = "0.2.5", features = ["futures"] }
web-sys = { version = "0.3.60", features = ["Document", "Element", "Node", "Window", "HtmlCollection", "HtmlInputElement", "TouchEvent", "TouchList", "Touch", "CssStyleDeclaration"] }
log = { version = "0.4.17" }
futures = "0.3.25"
wasm-bindgen-futures = "0.4.33"
chrono = { version = "0.4.23", features = ["wasmbind"] }
wasm-bindgen = "0.2.83"
asyncsync = { version = "0.2.0", features = ["local"] }
thiserror = "1.0.38"
serde-wasm-bindgen = "0.4.5"

[profile.release]
debug-assertions = false
opt-level = "z"
lto = "fat"
panic = "abort"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt= ['-Os']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
